<resources>
    <string name="app_name">Asistencia Pucp</string>

    <!-- Inicio de sesión -->
    <string name="login_txt_title">Inicio de sesión</string>
    <string name="login_ipt_username">   Nombre de usuario</string>
    <string name="login_ipt_password">   Contraseña</string>
    <string name="login_btn_submit">Ingresar</string>
    <string name="login_msg_username_empty">Ingrese su nombre de usuario.</string>
    <string name="login_msg_password_empty">Ingrese su contraseña.</string>
    <string name="login_msg_loading">Iniciando sesión…</string>
    <string name="login_dlg_offline_title">Iniciar sesión sin conexión</string>
    <string name="teacher_messages_offline1">Acceso sin conexión</string>
    <string name="login_dlg_offline_msg">No se pudo conectarse a Internet. ¿Desea iniciar sesión sin conexión?\nDebe haber iniciado sesión anteriormente para utilizar esta opción.</string>
    <string name="teacher_messages_offline2">No se pudo conectarse a Internet. ¿Desea continuar?</string>
    <string name="login_dlg_error_title">Error al iniciar sesión</string>
    <string name="login_dlg_error_msg_not_found">No se pudo iniciar sesión. Asegúrese que haya escrito correctamente su nombre de usuario y contraseña.</string>
    <string name="teacher_messages_not_found">No se encontraron los datos.</string>


    <!-- Pantalla de bienvenida -->
    <string name="principal_lbl_dictate">Dictando</string>
    <string name="principal_lbl_take">Llevando</string>
    <string name="principal_lbl_logout">Cerrar Sesión</string>
    <string name="principal_img_dictate">Dictando</string>
    <string name="principal_img_take">Llevando</string>
    <string name="principal_img_logout">Cerrar Sesión</string>

    <!-- Mensajes de conexión al API REST -->
    <string name="api_dlg_error_msg_http">Ocurrió un error desconocido.\nCódigo de error: HTTP %d</string>
    <string name="api_dlg_error_msg_rest">El servicio otorgó un error.\nCódigo de error: %d</string>
    <string name="api_dlg_error_msg_empty">El servicio no otorgó respuesta.</string>



    <!--teacher-->
    <string name="teacher_dlg_error_title">Error al ingresar</string>
    <string name="teacher_msg_loading">Ingresando</string>

    <!--teacher token -->
    <string name="teacherToken_txt_courseName">Nombre del curso</string>
    <string name="teacherToken_txt_schedule">Horario</string>
    <string name="teacherToken_txt_time">Hora</string>
    <string name="teacherToken_btn_generate">Generar</string>
    <string name="teacherToken_swt_enable">Activado</string>
    <string name="teacherToken_swt_disable">Desactivado</string>
    <string name="teacherToken_txt_token">123456</string>


    <!--teacher  messages -->
    <string name="teacherMessages_spn_schedule">Horario</string>
    <string name="teacherMessages_spn_course">Curso</string>
    <string name="teacherMessages_btn_message">Anunciar</string>
    <string name="teacherMessages_txt_message">Mensaje</string>

    <!--student token -->
    <string name="studentToken_txt_courseName">Nombre del curso: </string>
    <string name="studentToken_txt_schedule">Horario: </string>
    <string name="studentToken_txt_time">Hora: </string>
    <string name="studentToken_txt_token">Token: </string>
    <string name="studentToken_lbl_token_empty"> </string>
    <string name="studentToken_btn_send">Marcar Asistencia</string>
    <string name="studentToken_txt_marcado">Ingrese su token</string>

    <!--student attendance control -->
    <string name="student_txt_tittle">ASISTENCIA</string>
    <string name="student_lbl_firstcourse">Circuitos Digitales: </string>
    <string name="student_lbl_secondcourse">Maquinas Electricas: </string>
    <string name="student_lbl_thirdcourse">Programacion en Dispositivos Moviles: </string>
    <string name="student_txt_porcentaje">  %</string>

    <!--teacher attendance control -->
    <string name="teacherAttendance_txt_porcentaje">%</string>
    <string name="teacherAttendance_lbl_firstcourse">curso1</string>
    <string name="teacherAttendance_lbl_secondcourse">curso2</string>
    <string name="teacherAttendance_lbl_thirdcourse">curso3</string>
    <string name="teacherToken_txt_schedule_txt_tittle">horario</string>
    <string name="teacher_lbl_firstcourse">curso1</string>
    <string name="teacher_txt_porcentaje">%</string>
    <string name="teacher_lbl_secondcourse">curso2</string>
    <string name="teacher_lbl_thirdcourse">curso3</string>
    <string name="teacher_txt_tittle">ASISTENCIA</string>



</resources>
