<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".features.student.token.StudentTokenActivity">


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:onClick="retroceder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/retroceder_v2" />

    <TextView
        android:id="@+id/studentToken_txt_courseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:padding="16dp"
        android:text="@string/studentToken_txt_courseName"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="18dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="18dp"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/studentToken_txt_schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/studentToken_txt_schedule"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lbl_student_token_horario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/studentToken_txt_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/studentToken_txt_time"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lbl_student_token_hora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/studentToken_txt_token"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/studentToken_txt_token"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:ems="10"
            android:hint="@string/studentToken_txt_marcado"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/studentToken_lbl_token_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:padding="10dp"
            android:text="@string/studentToken_lbl_token_empty"
            android:textSize="24sp" />

        <Button
            android:id="@+id/studentToken_btn_send"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="#26A69A"
            android:gravity="center"
            android:onClick="marcarAsistencia"
            android:paddingBottom="16dp"
            android:text="@string/studentToken_btn_send"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>