<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:fadeScrollbars="false"
    android:scrollbars="vertical"
    tools:context=".features.login.LoginActivity">


    <EditText
        android:id="@+id/login_ipt_username"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:background="#eeeeee"
        android:ems="10"
        android:hint="@string/login_ipt_username"
        android:inputType="textPersonName"
        android:textAlignment="textStart"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="325dp" />

    <EditText
        android:id="@+id/login_ipt_password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="36dp"
        android:background="#eeeeee"
        android:ems="10"
        android:hint="@string/login_ipt_password"
        android:inputType="textPassword"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_ipt_username" />

    <Button
        android:id="@+id/login_btn_submit"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="36dp"
        android:height="50dp"
        android:background="#26A69A"
        android:fontFamily="sans-serif"
        android:onClick="login"
        android:text="@string/login_btn_submit"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_ipt_password" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:scaleX="0.8"
        android:scaleY="0.8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pucp3" />

</android.support.constraint.ConstraintLayout>