<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#26A69A"
    tools:context=".features.teacher.token.TeacherTokenActivity">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:onClick="retroceder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/retroceder_v2" />

    <TextView
        android:id="@+id/teacherToken_txt_courseName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/teacherToken_txt_schedule"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teacherToken_txt_courseName" />

    <TextView
        android:id="@+id/teacherToken_txt_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="40dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="20dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teacherToken_txt_schedule" />

    <Button
        android:id="@+id/teacherToken_btn_token"
        android:layout_width="179dp"
        android:layout_height="43dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="30dp"
        android:onClick="generateToken"
        android:text="@string/teacherToken_btn_generate"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teacherToken_txt_token" />

    <TextView
        android:id="@+id/teacherToken_txt_token"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="60dp"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teacherToken_txt_time" />

    <Switch
        android:id="@+id/teacherToken_swt_enable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="18dp"
        android:checked="true"
        android:onClick="swtOnClick"
        android:textOff="@string/teacherToken_swt_disable"
        android:textOn="@string/teacherToken_swt_enable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teacherToken_btn_token" />


</android.support.constraint.ConstraintLayout>