<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#26A69A"
    tools:context=".features.student.StudentActivity">

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:background="#26A69A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/retroceder" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="18dp"
        android:background="#26A69A"
        app:layout_constraintStart_toEndOf="@+id/student_txt_titlte"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/refresh" />

    <TextView
        android:id="@+id/student_txt_titlte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:hint="@string/student_txt_tittle"
        android:paddingLeft="16dp"
        android:paddingTop="10dp"
        android:paddingRight="16dp"
        android:paddingBottom="10dp"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/imageButton2"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="18dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:paddingLeft="18dp"
        android:paddingTop="18dp"
        android:paddingRight="18dp"
        android:paddingBottom="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_txt_titlte">

        <TextView
            android:id="@+id/student_lbl_firstcourse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:paddingBottom="16dp"
            android:text="@string/student_lbl_firstcourse"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:textAlignment="textEnd"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/student_txt_firstscore"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="#000000"
                android:textSize="36sp"
                android:textStyle="bold"
                tools:text="@string/student_txt_porcentaje" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="18dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:paddingLeft="18dp"
        android:paddingTop="18dp"
        android:paddingRight="18dp"
        android:paddingBottom="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/student_lbl_secondcourse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:paddingBottom="16dp"
            android:text="@string/student_lbl_secondcourse"
            android:textColor="#000000"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:textAlignment="textEnd"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/student_txt_secondscore"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="#000000"
                android:textSize="36sp"
                android:textStyle="bold"
                tools:text="@string/student_txt_porcentaje" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="18dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:paddingLeft="18dp"
        android:paddingTop="18dp"
        android:paddingRight="18dp"
        android:paddingBottom="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/student_lbl_thirdcourse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/student_lbl_thirdcourse"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:textAlignment="textEnd"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/student_txt_thirdcourse"
                android:layout_width="wrap_content"

                android:layout_height="match_parent"
                android:textColor="#000000"
                android:textSize="36sp"
                android:textStyle="bold"
                tools:text="@string/student_txt_porcentaje" />

        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>